  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? tylerjereddy, richardjgowers, IAlibay, hmacdope, orbeckst, cbouy,
         lilyminium, daveminh, jbarnoud, yuxuanzhuang, VOD555, ianmkenney,
         calcraven，xiki-tempula, mieczyslaw, manuel.nuno.melo, PicoCentauri,
         hanatok, rmeli

  * 2.0.0

Fixes
  * MOL2 files without bonds can now be read and written (Issue #3057)
  * Write `CONECT` record only once in multi-model PDB files (Issue #3018)
  * Add '.nc' as a recognised extension for the NCDFWriter (Issue #3030)
  * PDB parser now assigns empty records for partially missing/invalid elements
    instead of not assigning the elements attribute at all (Issue #2422)
  * PDB writer now uses elements attribute instead of guessing elements from
    atom name (Issue #2423)
  * Cleanup and parametrization of test_atomgroup.py (Issue #2995)
  * The methods provided by topology attributes now appear in the
    documentation (Issue #1845)
  * AtomGroup.center now works correctly for compounds + unwrapping
    (Issue #2984)
  * Avoid using deprecated array indexing in topology attributes
    (Issue #2990, PR #2991)
  * ParmedParser no longer guesses elements if they are not recognised, instead
    empty strings are assigned (Issue #2933)
  * Instead of using ATOM for both ATOM and HETATM, HETATM record type
    keyword is properly written out by PDB writer (Issue #1753, PR #2880).
  * Change referenced PDB standard version to 3.3 (Issue #2906).
  * Fixed reading in masses and charges from a hoomdxml file
    (Issue #2888, PR #2889)
  * Bond attribute is no longer set if PDB file contains no CONECT records
    (Issue #2832)
  * ResidueAttrs now have Atom as a target class by default; ICodes and
    Molnums now have default target_classes (#2803, PR #2805)
  * Selections on emtpy AtomGroups now return an empty AtomGroup instead of an
    error (Issue #2765)