@@ -151,7 +151,9 @@ Chronological list of authors
   - Nicholas Craven
   - Mieczyslaw Torchala
   - Haochuan Chen
-
+2021
+  - Aditya Kamath
+  
 External code
 -------------
 
